--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -27,6 +27,7 @@
   "item.minecraft.tipped_arrow.effect.tier_2_space_station_gui_potion_mars_orbit": "Arrow of Tier2SpaceStationGUIPotionMarsorbit",
   "biome.boss_tools.mars_biom": "Mars Biome",
   "block.boss_tools.flag_cyan": "Cyan Flag",
+  "block.boss_tools.flag_light_blue": "Light Blue Flag",
   "block.boss_tools.rocket_launch_pad_base": "Rocket Launch Pad",
   "item.minecraft.lingering_potion.effect.player_movement": "Lingering PlayerMovement",
   "itemGroup.tabboss_tools": "Space-BossTools",
@@ -111,7 +112,6 @@
   "block.boss_tools.fuel_refinery": "Fuel Refinery",
   "biome.boss_tools.mars_biome": "Moon Biome",
   "item.boss_tools.silicon_ingot": "Silicon Ingot",
-  "block.boss_tools.flaglight_blue": "Light Blue Flag",
   "itemGroup.tabspace_bosstools_basics": "Space-Bosstools: Basics",
   "block.boss_tools.energy_cable": "Energy Cable",
   "item.minecraft.splash_potion.effect.tier_1_space_station_gui_potion_moon": "Splash Tier1SpaceStationGUIPotionMoon",
