Fix Moon Orbit sky, Remake (orbit_overworld) id

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -19,7 +19,6 @@
   "block.boss_tools.moon_stone": "Moon Stone",
   "item.boss_tools.space_station": "Space Station",
   "item.boss_tools.desh_plate": "Desh Plate",
-  "item.boss_tools.umlaufbahnerde": "Admin Feuerzeug",
   "item.boss_tools.compressed_silicon": "Compressed Silicon",
   "item.boss_tools.mercury": "Admin Feuerzeug",
   "item.boss_tools.rocket_tier_2": "Rocket Spawn Egg",
@@ -75,6 +74,7 @@
   "item.boss_tools.hammer": "Hammer",
   "item.boss_tools.alien": "Alien Spawn Egg",
   "block.boss_tools.coal_generator": "Coal Generator",
+  "item.boss_tools.orbit_overworld": "Admin Feuerzeug",
   "item.boss_tools.engine_fan": "Engine Fan",
   "key.boss_tools.rocket_start_2": "Tier 2 Rocket Start",
   "key.boss_tools.rocket_start_3": "Tier 3 Rocket Start",
