Finished Alien Entity

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -39,19 +39,28 @@
   "key.mcreator.rocket_start": "Tier 1 Rocket Start",
   "block.boss_tools.rocket_launch_pad_base": "Rocket Launch Pad",
   "block.boss_tools.moon_sand": "Moon Sand",
+  "job.boss_tools.job2": "Smither",
+  "job.boss_tools.job1": "Farmer",
   "item.boss_tools.iron_stick": "Iron Stick",
+  "job.boss_tools.job4": "Smither",
   "itemGroup.tabboss_tools": "Space-BossTools",
   "block.boss_tools.mercury_cobblestone": "Mercury Cobblestone",
   "block.boss_tools.mars_ice_shard_ore": "Mars Ice Shard Ore",
+  "job.boss_tools.job3": "Smither",
   "item.boss_tools.space_armorboots": "Space Boots",
   "item.boss_tools.orbit_moon": "Admin Feuerzeug",
   "item.boss_tools.orbit_mercury": "Admin Feuerzeug",
+  "job.boss_tools.job6": "Smither",
   "advancements.workbench_advancement.title": "NASA Workbench",
+  "job.boss_tools.job5": "Smither",
+  "job.boss_tools.job8": "Smither",
   "entity.boss_tools.landing_gear": "Landing Gear",
+  "job.boss_tools.job7": "Smither",
   "block.boss_tools.flag_red": "Red Flag",
   "item.boss_tools.oxygen_gear": "Oxygen Gear",
   "block.boss_tools.sky_stone": "Sky Stone",
   "death.attack.oxygen": "%1$s couldn\u0027t breathe anymore",
+  "job.boss_tools.job9": "Smither",
   "biome.boss_tools.orbit_moon_biom": "Orbit Biome",
   "advancements.rocket_tier_2_advancement.title": "Tier 2 Rocket",
   "biome.boss_tools.mercurybiome": "Mercury Biome",
@@ -101,6 +110,10 @@
   "item.boss_tools.tier_3_rocket": "§bTier 3 Rocket",
   "entity.boss_tools.alien": "Alien",
   "block.boss_tools.iron_mark": "Iron Mark",
+  "job.boss_tools.job12": "Smither",
+  "job.boss_tools.job13": "Smither",
+  "job.boss_tools.job10": "Smither",
+  "job.boss_tools.job11": "Smither",
   "item.boss_tools.space_armor_chestplate": "Space Suit",
   "block.boss_tools.flag_brown": "Brown Flag",
   "key.boss_tools.rocket_start": "Tier 1 Rocket Start",
