Change litle things

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -13,7 +13,7 @@
   "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
   "item.boss_tools.silicon_ingot": "Silicon Ingot",
   "advancements.moon_advancement.descr": "§bHas entered the Moon",
-  "itemGroup.tabspace_bosstools_flags": "Space-Bosstools Flags",
+  "itemGroup.tabspace_bosstools_flags": "Space-Bosstools: Flags",
   "itemGroup.tabspace_bosstools_basics": "Space-Bosstools: Basics",
   "block.boss_tools.energy_cable": "Energy Cable",
   "item.boss_tools.orbit_mars": "Admin Feuerzeug",
