--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -167,6 +167,7 @@
   "block.boss_tools.flag_lime": "Lime Flag",
   "biome.boss_tools.orbit_mercury_biom": "Orbit Biome",
   "biome.boss_tools.orbit_mars_biom": "Orbit Biome",
+  "block.boss_tools.moon_glowstone_ore": "Moon Glowstone Ore",
   "block.boss_tools.moon_bricks": "Moon Bricks",
   "item.boss_tools.rocket_tier_3_spawn_egg": "Rocket Spawn Egg",
   "block.boss_tools.oxygen_loader": "Oxygen Loader",
