--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -6,9 +6,9 @@
   "item.boss_tools.iron_engine": "Iron Engine",
   "block.boss_tools.mars_diamond_ore": "Mars Diamond Ore",
   "item.boss_tools.oxygen_tank": "Oxygen Tank",
-  "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
-  "block.boss_tools.fuel_refinery": "Fuel Refinery",
   "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
+  "block.boss_tools.fuel_refinery": "Fuel Refinery",
+  "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
   "biome.boss_tools.mars_biome": "Moon Biome",
   "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
   "item.boss_tools.silicon_ingot": "Silicon Ingot",
@@ -40,7 +40,6 @@
   "biome.boss_tools.mars_biom": "Mars Biome",
   "block.boss_tools.flag_cyan": "Cyan Flag",
   "block.boss_tools.flag_light_blue": "Light Blue Flag",
-  "key.mcreator.rocket_start": "Tier 1 Rocket Start",
   "block.boss_tools.moon_sand": "Moon Sand",
   "job.boss_tools.job2": "Fisherman",
   "job.boss_tools.job1": "Farmer",
@@ -87,8 +86,6 @@
   "item.boss_tools.alienspitentity": "Alienspitentitytest",
   "block.boss_tools.coal_generator": "Coal Generator",
   "item.boss_tools.engine_fan": "Engine Fan",
-  "key.boss_tools.rocket_start_2": "Tier 2 Rocket Start",
-  "key.boss_tools.rocket_start_3": "Tier 3 Rocket Start",
   "fluid.fuel": "Fuel",
   "block.boss_tools.flag_pink": "Pink Flag",
   "block.boss_tools.flag_purple": "Purple Flag",
@@ -118,31 +115,25 @@
   "job.boss_tools.job11": "Butcher",
   "item.boss_tools.space_armor_chestplate": "Space Suit",
   "block.boss_tools.flag_brown": "Brown Flag",
-  "key.boss_tools.rocket_start": "Tier 1 Rocket Start",
+  "key.boss_tools.rocket_start": "Rocket Start",
   "item.boss_tools.space_armorbody": "Space Suit",
   "block.boss_tools.compressor": "Compressor",
   "block.boss_tools.mars_sand": "Mars Sand",
   "block.boss_tools.moon_iron_ore": "Moon Iron Ore",
   "item.boss_tools.space_armorlegs": "Space Pants",
   "item.boss_tools.rocket_fin": "Rocket Fin",
-  "key.mcreator.rocket_start_2": "Tier 2 Rocket Start",
   "block.boss_tools.flag_orange": "Orange Flag",
-  "key.mcreator.rocket_start_3": "Tier 3 Rocket Start",
   "block.boss_tools.block_of_steel": "Block of Steel",
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
-  "key.mcreator.rocket_rotation_a": "Rocket Rotation Left",
   "block.boss_tools.blast_furnace": "Blast Furnace",
   "advancements.rocket_tier_2_advancement.descr": "§bHas crafted a Tier 2 Rocket",
   "block.boss_tools.moon_brick_stairs": "Moon Brick Stairs",
   "block.boss_tools.flag_green": "Green Flag",
-  "key.mcreator.rocket_rotation_b": "Rocket Rotation Right",
   "block.boss_tools.flag_yellow": "Yellow Flag",
   "item.boss_tools.chesse": "Chesse",
   "item.boss_tools.battery": "Battery",
-  "key.boss_tools.rocket_rotation_b": "Rocket Rotation Right",
   "block.boss_tools.flag_magenta": "Magenta Flag",
-  "key.boss_tools.rocket_rotation_a": "Rocket Rotation Left",
   "itemGroup.tabspace_bosstools_spawn_eggs": "Space-Bosstools: Spawn Eggs",
   "block.boss_tools.flag": "Flag",
   "item.boss_tools.landing_gear": "Landing Gear Spawn Egg",
