Fixed Obfuscate Triggers

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -126,6 +126,7 @@
   "block.boss_tools.block_of_steel": "Block of Steel",
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
+  "key.boss_tools.lander_press_space": "Lander",
   "block.boss_tools.blast_furnace": "Blast Furnace",
   "advancements.rocket_tier_2_advancement.descr": "§bHas crafted a Tier 2 Rocket",
   "block.boss_tools.moon_brick_stairs": "Moon Brick Stairs",
