--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -16,12 +16,15 @@
   "itemGroup.tabspace_bosstools_flags": "Space-Bosstools: Flags",
   "itemGroup.tabspace_bosstools_basics": "Space-Bosstools: Basics",
   "block.boss_tools.energy_cable": "Energy Cable",
+  "key.boss_tools.rocket_key_rotation_a": "Rocket Key Rotation A",
   "item.boss_tools.barrel": "Barrel",
   "item.boss_tools.iron_plate": "Iron Plate",
+  "key.boss_tools.rocket_key_rotation_d": "Rocket Key Rotation D",
   "block.boss_tools.moon_stone": "Moon Stone",
   "item.boss_tools.desh_plate": "Desh Plate",
   "item.boss_tools.space_station": "Space Station",
   "item.boss_tools.compressed_silicon": "Compressed Silicon",
+  "key.boss_tools.lander_key_space": "Lander Key Space",
   "item.boss_tools.rocket_tier_2": "Rocket Spawn Egg",
   "item.boss_tools.golden_tank": "Golden Tank",
   "block.boss_tools.block_of_rusted_iron_pillar": "Block of Rusted Iron Pillar",
@@ -126,7 +129,6 @@
   "block.boss_tools.block_of_steel": "Block of Steel",
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
-  "key.boss_tools.lander_press_space": "Lander",
   "block.boss_tools.blast_furnace": "Blast Furnace",
   "advancements.rocket_tier_2_advancement.descr": "§bHas crafted a Tier 2 Rocket",
   "block.boss_tools.moon_brick_stairs": "Moon Brick Stairs",
