--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -17,6 +17,7 @@
   "itemGroup.tabspace_bosstools_basics": "Space-Bosstools: Basics",
   "block.boss_tools.energy_cable": "Energy Cable",
   "key.boss_tools.rocket_key_rotation_a": "Rocket Key Rotation A",
+  "entity.boss_tools.rover": "Rover",
   "item.boss_tools.barrel": "Barrel",
   "item.boss_tools.iron_plate": "Iron Plate",
   "key.boss_tools.rocket_key_rotation_d": "Rocket Key Rotation D",
@@ -147,6 +148,7 @@
   "biome.boss_tools.orbit_overworld_biom": "Orbit Biome",
   "block.boss_tools.moon_cheese_ore": "Moon Cheese Ore",
   "item.boss_tools.alien_zombie_spawn_egg": "Alien Zombie Spawn Egg",
+  "item.boss_tools.rover_spawn_egg": "Rover Spawn Egg",
   "subtitles.rocketfly": "",
   "item.boss_tools.desh_ingot": "Desh Ingot",
   "item.boss_tools.space_armorhelmet": "Oxygen Mask",
