Renamed Item, Add Recpie (not final),fixed speed (rover)

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -85,7 +85,7 @@
   "item.boss_tools.golden_engine": "Golden Engine",
   "key.categories.spacebosstools": "Space-Bosstools",
   "advancements.rocket_tier_3_advancement.descr": "§bHas crafted a Tier 3 Rocket",
-  "item.boss_tools.rover_item": "Rover Item",
+  "item.boss_tools.rover_item": "§bRover",
   "item.boss_tools.rocket_spawn_egg": "Rocket Spawn Egg",
   "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
   "item.boss_tools.hammer": "Hammer",
