--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -6,9 +6,9 @@
   "item.boss_tools.iron_engine": "Iron Engine",
   "block.boss_tools.mars_diamond_ore": "Mars Diamond Ore",
   "item.boss_tools.oxygen_tank": "Oxygen Tank",
-  "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
-  "block.boss_tools.fuel_refinery": "Fuel Refinery",
   "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
+  "block.boss_tools.fuel_refinery": "Fuel Refinery",
+  "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
   "biome.boss_tools.mars_biome": "Moon Biome",
   "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
   "fluid.boss_tools.fuel": "Fuel",
@@ -39,6 +39,7 @@
   "block.boss_tools.mars_silicon_ore": "Mars Silicon Ore",
   "item.boss_tools.steel_ingot": "Steel Ingot",
   "entity.boss_tools.alien_zombie": "Alien Zombie",
+  "item.boss_tools.wheel": "Wheel",
   "item.boss_tools.iron_tank": "Iron Tank",
   "item.boss_tools.ice_shard": "Ice Shard",
   "block.boss_tools.moon_brick_slab": "Moon Brick Slab",
