--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -6,10 +6,10 @@
   "item.boss_tools.iron_engine": "Iron Engine",
   "block.boss_tools.mars_diamond_ore": "Mars Diamond Ore",
   "item.boss_tools.oxygen_tank": "Oxygen Tank",
-  "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
-  "block.boss_tools.fuel_refinery": "Fuel Refinery",
   "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
-  "biome.boss_tools.mars_biome": "Moon Biome",
+  "block.boss_tools.fuel_refinery": "Fuel Refinery",
+  "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
+  "biome.boss_tools.mars_biome": "Mars Biome",
   "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
   "fluid.boss_tools.fuel": "Fuel",
   "item.boss_tools.silicon_ingot": "Silicon Ingot",
@@ -17,6 +17,7 @@
   "itemGroup.tabspace_bosstools_flags": "Space-Bosstools: Flags",
   "itemGroup.tabspace_bosstools_basics": "Space-Bosstools: Basics",
   "key.boss_tools.rocket_key_rotation_a": "Rocket Key Rotation A",
+  "item.boss_tools.orbit_mars": "Admin Feuerzeug",
   "entity.boss_tools.rover": "Rover",
   "item.boss_tools.barrel": "Barrel",
   "item.boss_tools.iron_plate": "Iron Plate",
@@ -27,6 +28,7 @@
   "item.boss_tools.network_linker": "Network Linker",
   "item.boss_tools.compressed_silicon": "Compressed Silicon",
   "key.boss_tools.lander_key_space": "Lander Key Space",
+  "item.boss_tools.mercury": "Admin Feuerzeug",
   "item.boss_tools.rocket_tier_2": "Rocket Spawn Egg",
   "item.boss_tools.golden_tank": "Golden Tank",
   "block.boss_tools.fuel": "Fuel",
@@ -42,9 +44,9 @@
   "item.boss_tools.wheel": "Wheel",
   "item.boss_tools.iron_tank": "Iron Tank",
   "item.boss_tools.ice_shard": "Ice Shard",
+  "item.boss_tools.mars": "Admin Feuerzeug",
   "block.boss_tools.moon_brick_slab": "Moon Brick Slab",
   "block.boss_tools.cracked_moon_brick_stairs": "Cracked Moon Brick Stairs",
-  "biome.boss_tools.mars_biom": "Mars Biome",
   "block.boss_tools.flag_cyan": "Cyan Flag",
   "block.boss_tools.flag_light_blue": "Light Blue Flag",
   "block.boss_tools.moon_sand": "Moon Sand",
@@ -58,20 +60,23 @@
   "job.boss_tools.job3": "Shepheard",
   "item.boss_tools.space_armorboots": "Space Boots",
   "job.boss_tools.job6": "Cartographer",
+  "biome.boss_tools.orbit_moon_biome": "Orbit Biome",
+  "item.boss_tools.orbit_moon": "Admin Feuerzeug",
+  "item.boss_tools.orbit_mercury": "Admin Feuerzeug",
   "advancements.workbench_advancement.title": "NASA Workbench",
   "job.boss_tools.job5": "Librarian",
   "job.boss_tools.job8": "Armorer",
   "entity.boss_tools.landing_gear": "Landing Gear",
   "job.boss_tools.job7": "Cleric",
+  "biome.boss_tools.orbit_mercury_biome": "Orbit Biome",
+  "biome.boss_tools.mars_hills_biome": "Mars Biome",
   "block.boss_tools.flag_red": "Red Flag",
   "item.boss_tools.oxygen_gear": "Oxygen Gear",
   "block.boss_tools.sky_stone": "Sky Stone",
   "death.attack.oxygen": "%1$s couldn\u0027t breathe anymore",
   "block.boss_tools.block_of_iron_plating": "Block of Iron Plating",
   "job.boss_tools.job9": "Weaponsmith",
-  "biome.boss_tools.orbit_moon_biom": "Orbit Biome",
   "advancements.rocket_tier_2_advancement.title": "Tier 2 Rocket",
-  "biome.boss_tools.mercurybiome": "Mercury Biome",
   "advancements.workbench_advancement.descr": "§bHas crafted a NASA Workbench",
   "advancements.rocket_advancement.descr": "§bHas crafted a Tier 1 Rocket",
   "biome.boss_tools.moon_biome": "Moon Biome",
@@ -79,6 +84,7 @@
   "item.boss_tools.engine_casing": "Engine Casing",
   "item.boss_tools.alien_bee": "Alien Bee Spawn Egg",
   "item.boss_tools.landing_gear_spawn_egg": "Landing Gear Spawn Egg",
+  "item.boss_tools.moon": "Admin Feuerzeug",
   "block.boss_tools.flag_blue": "Blue Flag",
   "item.boss_tools.diamond_tank": "Diamond Tank",
   "block.boss_tools.cracked_moon_brick_slab": "Cracked Moon Brick Slab",
@@ -93,13 +99,13 @@
   "item.boss_tools.alien": "Alien Spawn Egg",
   "item.boss_tools.alienspitentity": "Alienspitentitytest",
   "block.boss_tools.coal_generator": "Coal Generator",
+  "item.boss_tools.orbit_overworld": "Admin Feuerzeug",
   "item.boss_tools.engine_fan": "Engine Fan",
   "fluid.fuel": "Fuel",
   "block.boss_tools.flag_pink": "Pink Flag",
   "block.boss_tools.flag_purple": "Purple Flag",
   "block.boss_tools.wireless_energy_router": "Wireless Energy Router",
   "block.boss_tools.mars_iron_ore": "Mars Iron Ore",
-  "biome.boss_tools.moon_biom": "Moon Biome",
   "advancements.rocket_advancement.title": "Tier 1 Rocket",
   "itemGroup.tabspace_bosstools_machines": "Space-Bosstools: Machines",
   "block.boss_tools.coal_torch": "Coal Torch",
@@ -133,6 +139,7 @@
   "item.boss_tools.rocket_fin": "Rocket Fin",
   "block.boss_tools.flag_orange": "Orange Flag",
   "block.boss_tools.block_of_steel": "Block of Steel",
+  "biome.boss_tools.orbit_mars_biome": "Orbit Biome",
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
   "block.boss_tools.blast_furnace": "Blast Furnace",
@@ -150,21 +157,21 @@
   "itemGroup.tabspace_bosstools_materials": "Space-Bosstools: Materials",
   "entity.boss_tools.rocket_tier_2": "Rocket",
   "key.mcreator.landingear_space_hotkey": "Landing Gear",
-  "biome.boss_tools.orbit_overworld_biom": "Orbit Biome",
   "block.boss_tools.moon_cheese_ore": "Moon Cheese Ore",
   "item.boss_tools.alien_zombie_spawn_egg": "Alien Zombie Spawn Egg",
+  "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
   "item.boss_tools.rover_spawn_egg": "Rover Spawn Egg",
   "subtitles.rocketfly": "",
   "item.boss_tools.desh_ingot": "Desh Ingot",
+  "biome.boss_tools.orbit_overworld_biome": "Orbit Biome",
   "item.boss_tools.space_armorhelmet": "Oxygen Mask",
   "item.boss_tools.barrel_of_fuel": "Barrel of Fuel",
   "item.boss_tools.compressed_desh": "Compressed Desh",
   "block.boss_tools.flag_lime": "Lime Flag",
-  "biome.boss_tools.orbit_mercury_biom": "Orbit Biome",
-  "biome.boss_tools.orbit_mars_biom": "Orbit Biome",
   "block.boss_tools.moon_glowstone_ore": "Moon Glowstone Ore",
   "block.boss_tools.moon_bricks": "Moon Bricks",
   "item.boss_tools.rocket_tier_3_spawn_egg": "Rocket Spawn Egg",
   "block.boss_tools.oxygen_loader": "Oxygen Loader",
+  "biome.boss_tools.mercury_biome": "Mercury Biome",
   "block.boss_tools.moon_desh_ore": "Moon Desh Ore"
 }
