Change Biome Generation high of Mars and Moon Generation, add Steel block to Becon base block , Fix Block Resistance, Fix Can not Brake Mars and Moon Sand with Hand

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.boss_tools.fuel_bucket": "Fuel Bucket",
   "block.boss_tools.oxygen_bullet_generator": "Oxygen Bullet Generator",
   "block.boss_tools.block_of_blue_iron_plating": "Block of Blue Iron Plating",
+  "block.boss_tools.venus_sand": "Venus Sand",
   "item.boss_tools.star_crawler_spawn_egg": "Star Crawler Spawn Egg",
   "item.boss_tools.iron_engine": "Iron Engine",
   "block.boss_tools.mars_diamond_ore": "Mars Diamond Ore",
@@ -75,6 +76,7 @@
   "death.attack.oxygen": "%1$s couldn\u0027t breathe anymore",
   "block.boss_tools.block_of_iron_plating": "Block of Iron Plating",
   "job.boss_tools.job9": "Weaponsmith",
+  "item.boss_tools.venus": "Venus Portal Igniter",
   "advancements.rocket_tier_2_advancement.title": "Tier 2 Rocket",
   "advancements.workbench_advancement.descr": "§bHas crafted a NASA Workbench",
   "advancements.rocket_advancement.descr": "§bHas crafted a Tier 1 Rocket",
@@ -99,6 +101,7 @@
   "item.boss_tools.alienspitentity": "Alienspitentitytest",
   "block.boss_tools.coal_generator": "Coal Generator",
   "item.boss_tools.orbit_overworld": "Admin Feuerzeug",
+  "biome.boss_tools.venus_biome": "Venus Biome",
   "item.boss_tools.engine_fan": "Engine Fan",
   "fluid.fuel": "Fuel",
   "block.boss_tools.flag_pink": "Pink Flag",
@@ -121,6 +124,7 @@
   "advancements.rocket_tier_3_advancement.title": "Tier 3 Rocket",
   "block.boss_tools.solar_panel": "Solar Panel",
   "item.boss_tools.tier_3_rocket": "§bTier 3 Rocket",
+  "block.boss_tools.venus_stone": "Venus Stone",
   "entity.boss_tools.alien": "Alien",
   "block.boss_tools.iron_mark": "Iron Mark",
   "job.boss_tools.job12": "Leatherworker",
