Add Venus Deltas

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -119,6 +119,7 @@
   "block.boss_tools.mars_stone": "Mars Stone",
   "entity.boss_tools.star_crawler": "Star Crawler",
   "item.boss_tools.rocket_tier_2_spawn_egg": "Rocket Spawn Egg",
+  "biome.boss_tools.infernal_venus_barrens": "Infernal Venus Barrens",
   "item.boss_tools.tier_1_rocket": "§bTier 1 Rocket",
   "entity.boss_tools.rocket": "Rocket",
   "advancements.rocket_tier_3_advancement.title": "Tier 3 Rocket",
@@ -131,6 +132,7 @@
   "job.boss_tools.job13": "Mason",
   "job.boss_tools.job10": "Toolsmith",
   "job.boss_tools.job11": "Butcher",
+  "block.boss_tools.infernal_spire": "Infernal Spire",
   "item.boss_tools.space_armor_chestplate": "Space Suit",
   "block.boss_tools.flag_brown": "Brown Flag",
   "key.boss_tools.rocket_start": "Rocket Start",
