--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -90,6 +90,7 @@
   "item.boss_tools.diamond_tank": "Diamond Tank",
   "block.boss_tools.cracked_moon_brick_slab": "Cracked Moon Brick Slab",
   "item.boss_tools.tier_2_rocket": "§bTier 2 Rocket",
+  "death.attack.venus.acid": "%1$s plenty of acid to sacrifice",
   "item.boss_tools.golden_engine": "Golden Engine",
   "key.categories.spacebosstools": "Space-Bosstools",
   "advancements.rocket_tier_3_advancement.descr": "§bHas crafted a Tier 3 Rocket",
