Add Venus Hills, Add Venus Sandstone,mirror changes

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -70,6 +70,7 @@
   "entity.boss_tools.landing_gear": "Landing Gear",
   "job.boss_tools.job7": "Cleric",
   "biome.boss_tools.orbit_mercury_biome": "Orbit Biome",
+  "biome.boss_tools.venus_hills_biome": "Venus Biome",
   "block.boss_tools.flag_red": "Red Flag",
   "item.boss_tools.oxygen_gear": "Oxygen Gear",
   "block.boss_tools.sky_stone": "Sky Stone",
@@ -94,6 +95,7 @@
   "item.boss_tools.golden_engine": "Golden Engine",
   "key.categories.spacebosstools": "Space-Bosstools",
   "advancements.rocket_tier_3_advancement.descr": "§bHas crafted a Tier 3 Rocket",
+  "block.boss_tools.venus_sandstone": "Venus Sandstone",
   "item.boss_tools.rover_item": "§bRover",
   "item.boss_tools.rocket_spawn_egg": "Rocket Spawn Egg",
   "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
