Add Orbit Venus, Rework Gravity System on Orbits

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -53,6 +53,7 @@
   "block.boss_tools.moon_sand": "Moon Sand",
   "job.boss_tools.job2": "Fisherman",
   "job.boss_tools.job1": "Farmer",
+  "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
   "item.boss_tools.iron_stick": "Iron Stick",
   "job.boss_tools.job4": "Fletcher",
   "itemGroup.tabboss_tools": "Space-BossTools",
@@ -122,7 +123,6 @@
   "block.boss_tools.mars_stone": "Mars Stone",
   "entity.boss_tools.star_crawler": "Star Crawler",
   "item.boss_tools.rocket_tier_2_spawn_egg": "Rocket Spawn Egg",
-  "biome.boss_tools.infernal_venus_barrens": "Infernal Venus Barrens",
   "item.boss_tools.tier_1_rocket": "§bTier 1 Rocket",
   "entity.boss_tools.rocket": "Rocket",
   "advancements.rocket_tier_3_advancement.title": "Tier 3 Rocket",
@@ -161,6 +161,7 @@
   "itemGroup.tabspace_bosstools_spawn_eggs": "Space-Bosstools: Spawn Eggs",
   "block.boss_tools.flag": "Flag",
   "item.boss_tools.landing_gear": "Landing Gear Spawn Egg",
+  "item.boss_tools.orbit_venus": "Orbit Venus Portal Igniter",
   "entity.boss_tools.rocket_tier_3": "Rocket",
   "itemGroup.tabspace_bosstools_materials": "Space-Bosstools: Materials",
   "entity.boss_tools.rocket_tier_2": "Rocket",
@@ -170,6 +171,7 @@
   "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
   "item.boss_tools.rover_spawn_egg": "Rover Spawn Egg",
   "subtitles.rocketfly": "",
+  "biome.boss_tools.orbit_venus_biome": "Orbit Biome",
   "item.boss_tools.desh_ingot": "Desh Ingot",
   "biome.boss_tools.orbit_overworld_biome": "Orbit Biome",
   "item.boss_tools.space_armorhelmet": "Oxygen Mask",
