--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -50,7 +50,7 @@
   "block.boss_tools.cracked_moon_brick_stairs": "Cracked Moon Brick Stairs",
   "block.boss_tools.flag_cyan": "Cyan Flag",
   "block.boss_tools.flag_light_blue": "Light Blue Flag",
-  "block.boss_tools.moon_sand": "Moonsand",
+  "block.boss_tools.moon_sand": "Moon Sand",
   "job.boss_tools.job2": "Fisherman",
   "job.boss_tools.job1": "Farmer",
   "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
