Reworked Coal Torch

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -83,6 +83,7 @@
   "advancements.rocket_advancement.descr": "§bHas crafted a Tier 1 Rocket",
   "biome.boss_tools.moon_biome": "Moon Biome",
   "block.boss_tools.flag_gray": "Gray Flag",
+  "block.boss_tools.wall_coal_torch": "Coal Torch",
   "item.boss_tools.engine_casing": "Engine Casing",
   "item.boss_tools.alien_bee": "Alien Bee Spawn Egg",
   "item.boss_tools.landing_gear_spawn_egg": "Landing Gear Spawn Egg",
@@ -96,7 +97,6 @@
   "key.categories.spacebosstools": "Space-Bosstools",
   "advancements.rocket_tier_3_advancement.descr": "§bHas crafted a Tier 3 Rocket",
   "block.boss_tools.venus_sandstone": "Venus Sandstone",
-  "item.boss_tools.rover_item": "§bRover",
   "item.boss_tools.rocket_spawn_egg": "Rocket Spawn Egg",
   "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
   "item.boss_tools.hammer": "Hammer",
@@ -144,6 +144,7 @@
   "item.boss_tools.rocket_fin": "Rocket Fin",
   "block.boss_tools.flag_orange": "Orange Flag",
   "block.boss_tools.block_of_steel": "Block of Steel",
+  "item.boss_tools.rover": "§bRover",
   "biome.boss_tools.orbit_mars_biome": "Orbit Biome",
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
@@ -167,7 +168,6 @@
   "block.boss_tools.moon_cheese_ore": "Moon Cheese Ore",
   "item.boss_tools.alien_zombie_spawn_egg": "Alien Zombie Spawn Egg",
   "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
-  "item.boss_tools.rover_spawn_egg": "Rover Spawn Egg",
   "subtitles.rocketfly": "",
   "biome.boss_tools.orbit_venus_biome": "Orbit Biome",
   "item.boss_tools.desh_ingot": "Desh Ingot",
