Solar Panel can now placed also under Water

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -67,7 +67,6 @@
   "advancements.workbench_advancement.title": "NASA Workbench",
   "job.boss_tools.job5": "Librarian",
   "job.boss_tools.job8": "Armorer",
-  "entity.boss_tools.landing_gear": "Landing Gear",
   "job.boss_tools.job7": "Cleric",
   "biome.boss_tools.orbit_mercury_biome": "Orbit Biome",
   "biome.boss_tools.venus_hills_biome": "Venus Biome",
@@ -86,7 +85,6 @@
   "block.boss_tools.wall_coal_torch": "Coal Torch",
   "item.boss_tools.engine_casing": "Engine Casing",
   "item.boss_tools.alien_bee": "Alien Bee Spawn Egg",
-  "item.boss_tools.landing_gear_spawn_egg": "Landing Gear Spawn Egg",
   "item.boss_tools.moon": "Admin Feuerzeug",
   "block.boss_tools.flag_blue": "Blue Flag",
   "item.boss_tools.diamond_tank": "Diamond Tank",
@@ -124,6 +122,7 @@
   "item.boss_tools.rocket_tier_2_spawn_egg": "Rocket Spawn Egg",
   "item.boss_tools.tier_1_rocket": "§bTier 1 Rocket",
   "entity.boss_tools.rocket": "Rocket",
+  "biome.boss_tools.mercury_magma_biome": "Mercury Biome",
   "advancements.rocket_tier_3_advancement.title": "Tier 3 Rocket",
   "block.boss_tools.solar_panel": "Solar Panel",
   "item.boss_tools.tier_3_rocket": "§bTier 3 Rocket",
