--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -111,6 +111,7 @@
   "block.boss_tools.flag_pink": "Pink Flag",
   "block.boss_tools.flag_purple": "Purple Flag",
   "block.boss_tools.wireless_energy_router": "Wireless Energy Router",
+  "block.boss_tools.block_of_desh": "Block of Desh",
   "block.boss_tools.mars_iron_ore": "Mars Iron Ore",
   "advancements.rocket_advancement.title": "Tier 1 Rocket",
   "itemGroup.tabspace_bosstools_machines": "Space-Bosstools: Machines",
@@ -148,6 +149,7 @@
   "block.boss_tools.flag_orange": "Orange Flag",
   "block.boss_tools.block_of_steel": "Block of Steel",
   "item.boss_tools.rover": "§bRover",
+  "block.boss_tools.block_of_silicon": "Block of Silicon",
   "biome.boss_tools.orbit_mars_biome": "Orbit Biome",
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
