--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -23,7 +23,6 @@
   "item.boss_tools.orbit_mars": "Admin Feuerzeug",
   "entity.boss_tools.rover": "Rover",
   "item.boss_tools.barrel": "Barrel",
-  "entity.boss_tools.pygros": "Pygros",
   "item.boss_tools.iron_plate": "Iron Plate",
   "key.boss_tools.rocket_key_rotation_d": "Rocket Key Rotation D",
   "block.boss_tools.moon_stone": "Moon Stone",
@@ -52,11 +51,11 @@
   "block.boss_tools.cracked_moon_brick_stairs": "Cracked Moon Brick Stairs",
   "block.boss_tools.flag_cyan": "Cyan Flag",
   "block.boss_tools.flag_light_blue": "Light Blue Flag",
-  "item.boss_tools.pygros_spawn_egg": "Pygros Spawn Egg",
   "block.boss_tools.moon_sand": "Moon Sand",
   "job.boss_tools.job2": "Fisherman",
   "job.boss_tools.job1": "Farmer",
   "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
+  "item.boss_tools.pygro_spawn_egg": "Pygro Spawn Egg",
   "item.boss_tools.iron_stick": "Iron Stick",
   "job.boss_tools.job4": "Fletcher",
   "itemGroup.tabboss_tools": "Space-BossTools",
@@ -104,6 +103,7 @@
   "item.boss_tools.hammer": "Hammer",
   "item.boss_tools.alien": "Alien Spawn Egg",
   "block.boss_tools.coal_generator": "Coal Generator",
+  "entity.boss_tools.pygro": "Pygro",
   "item.boss_tools.orbit_overworld": "Admin Feuerzeug",
   "item.boss_tools.netherite_space_boots": "Netherite Space Boots",
   "biome.boss_tools.venus_biome": "Venus Biome",
