--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -14,6 +14,7 @@
   "biome.boss_tools.mars_biome": "Mars Biome",
   "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
   "fluid.boss_tools.fuel": "Fuel",
+  "entity.boss_tools.mogler": "Mogler",
   "item.boss_tools.silicon_ingot": "Silicon Ingot",
   "advancements.moon_advancement.descr": "§bHas entered the Moon",
   "itemGroup.tabspace_bosstools_flags": "Space-Bosstools: Flags",
@@ -173,6 +174,7 @@
   "entity.boss_tools.rocket_tier_2": "Rocket",
   "block.boss_tools.moon_cheese_ore": "Moon Cheese Ore",
   "item.boss_tools.alien_zombie_spawn_egg": "Alien Zombie Spawn Egg",
+  "item.boss_tools.mogler_spawn_egg": "Mogler Spawn Egg",
   "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
   "subtitles.rocketfly": "",
   "biome.boss_tools.orbit_venus_biome": "Orbit Biome",
