--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -71,6 +71,7 @@
   "job.boss_tools.job8": "Armorer",
   "job.boss_tools.job7": "Cleric",
   "biome.boss_tools.orbit_mercury_biome": "Orbit Biome",
+  "item.boss_tools.steel_sword": "Steel Sword",
   "biome.boss_tools.venus_hills_biome": "Venus Biome",
   "block.boss_tools.flag_red": "Red Flag",
   "item.boss_tools.oxygen_gear": "Oxygen Gear",
