--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -130,6 +130,7 @@
   "item.boss_tools.steel_sword": "Steel Sword",
   "biome.boss_tools.venus_hills_biome": "Venus Biome",
   "item.boss_tools.oxygen_gear": "Oxygen Gear",
+  "item.boss_tools.oxygen_mask": "Oxygen Mask",
   "block.boss_tools.sky_stone": "Sky Stone",
   "advancements.workbench_advancement.descr": "§bHas crafted a NASA Workbench",
   "biome.boss_tools.moon_biome": "Moon Biome",
