Clean up Key Bindings (not final)
Clean up Key Bindings (not final)

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -53,7 +53,7 @@
   "block.boss_tools.cracked_moon_brick_slab": "Cracked Moon Brick Slab",
   "item.boss_tools.steel_shovel": "Steel Shovel",
   "item.boss_tools.golden_engine": "Golden Engine",
-  "key.categories.spacebosstools": "Space-Bosstools",
+  "key.categories.boss_tools": "Space-Bosstools",
   "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
   "item.boss_tools.hammer": "Hammer",
   "item.boss_tools.alien": "Alien Spawn Egg",
