--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -1,197 +1,179 @@
 {
   "item.boss_tools.fuel_bucket": "Fuel Bucket",
-  "block.boss_tools.oxygen_bullet_generator": "Oxygen Bullet Generator",
-  "block.boss_tools.block_of_blue_iron_plating": "Block of Blue Iron Plating",
   "item.boss_tools.star_crawler_spawn_egg": "Star Crawler Spawn Egg",
   "item.boss_tools.iron_engine": "Iron Engine",
   "item.boss_tools.oxygen_tank": "Oxygen Tank",
   "item.boss_tools.steel_hoe": "Steel Hoe",
-  "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
-  "fluid.boss_tools.fuel": "Fuel",
-  "entity.boss_tools.mogler": "Mogler",
-  "itemGroup.tab_flags": "Space-Bosstools: Flags",
-  "entity.boss_tools.rover": "Rover",
   "item.boss_tools.iron_plate": "Iron Plate",
   "item.boss_tools.desh_plate": "Desh Plate",
   "item.boss_tools.space_station": "Space Station",
   "item.boss_tools.compressed_silicon": "Compressed Silicon",
-  "key.boss_tools.lander_key_space": "Lander Key Space",
-  "item.boss_tools.rocket_tier_2": "Rocket Spawn Egg",
-  "block.boss_tools.fuel": "Fuel",
-  "block.boss_tools.block_of_rusted_iron_pillar": "Block of Rusted Iron Pillar",
-  "itemGroup.tab_blocks": "Space-Bosstools: Blocks",
-  "item.boss_tools.rocket": "Rocket Spawn Egg",
-  "block.boss_tools.mars_silicon_ore": "Mars Silicon Ore",
   "item.boss_tools.ice_shard": "Ice Shard",
-  "item.boss_tools.mars": "Admin Feuerzeug",
-  "block.boss_tools.moon_brick_slab": "Moon Brick Slab",
-  "block.boss_tools.cracked_moon_brick_stairs": "Cracked Moon Brick Stairs",
-  "block.boss_tools.flag_cyan": "Cyan Flag",
-  "block.boss_tools.flag_light_blue": "Light Blue Flag",
-  "job.boss_tools.job2": "Fisherman",
-  "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
-  "job.boss_tools.job1": "Farmer",
-  "job.boss_tools.job4": "Fletcher",
-  "itemGroup.tab_normal": "Space-BossTools",
-  "job.boss_tools.job3": "Shepheard",
-  "job.boss_tools.job6": "Cartographer",
-  "advancements.workbench_advancement.title": "NASA Workbench",
-  "job.boss_tools.job5": "Librarian",
-  "job.boss_tools.job8": "Armorer",
-  "job.boss_tools.job7": "Cleric",
-  "block.boss_tools.flag_red": "Red Flag",
-  "death.attack.oxygen": "%1$s couldn\u0027t breathe anymore",
-  "block.boss_tools.block_of_iron_plating": "Block of Iron Plating",
-  "job.boss_tools.job9": "Weaponsmith",
-  "item.boss_tools.venus": "Venus Portal Igniter",
-  "advancements.rocket_tier_2_advancement.title": "Tier 2 Rocket",
   "item.boss_tools.netherite_space_pants": "Netherite Space Pants",
-  "advancements.rocket_advancement.descr": "§bHas crafted a Tier 1 Rocket",
   "item.boss_tools.engine_casing": "Engine Casing",
-  "item.boss_tools.moon": "Admin Feuerzeug",
   "item.boss_tools.diamond_tank": "Diamond Tank",
-  "block.boss_tools.cracked_moon_brick_slab": "Cracked Moon Brick Slab",
   "item.boss_tools.steel_shovel": "Steel Shovel",
   "item.boss_tools.golden_engine": "Golden Engine",
-  "key.categories.boss_tools": "Space-Bosstools",
-  "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
   "item.boss_tools.hammer": "Hammer",
-  "item.boss_tools.alien": "Alien Spawn Egg",
-  "block.boss_tools.coal_generator": "Coal Generator",
-  "entity.boss_tools.pygro": "Pygro",
-  "item.boss_tools.orbit_overworld": "Admin Feuerzeug",
   "item.boss_tools.netherite_space_boots": "Netherite Space Boots",
-  "biome.boss_tools.venus_biome": "Venus Biome",
-  "fluid.fuel": "Fuel",
   "item.boss_tools.steel_pickaxe": "Steel Pickaxe",
-  "block.boss_tools.wireless_energy_router": "Wireless Energy Router",
-  "block.boss_tools.block_of_desh": "Block of Desh",
-  "block.boss_tools.mars_iron_ore": "Mars Iron Ore",
-  "advancements.rocket_advancement.title": "Tier 1 Rocket",
-  "block.boss_tools.coal_torch": "Coal Torch",
-  "block.boss_tools.nasa_workbench": "§dNASA Workbench",
-  "advancements.moon_advancement.title": "Moon",
   "item.boss_tools.space_pants": "Space Pants",
-  "block.boss_tools.mars_stone": "Mars Stone",
   "item.boss_tools.tier_1_rocket": "§bTier 1 Rocket",
-  "advancements.rocket_tier_3_advancement.title": "Tier 3 Rocket",
-  "block.boss_tools.venus_stone": "Venus Stone",
-  "block.boss_tools.infernal_spire": "Infernal Spire",
-  "block.boss_tools.flag_brown": "Brown Flag",
-  "key.boss_tools.rocket_start": "Rocket Start",
-  "biome.boss_tools.orbit_mars_biome": "Orbit Biome",
   "item.boss_tools.diamond_engine": "Diamond Engine",
-  "block.boss_tools.moon_brick_stairs": "Moon Brick Stairs",
   "item.boss_tools.space_suit": "Space Suit",
-  "block.boss_tools.flag_green": "Green Flag",
-  "block.boss_tools.flag_yellow": "Yellow Flag",
-  "block.boss_tools.flag_magenta": "Magenta Flag",
-  "block.boss_tools.flag": "Flag",
   "item.boss_tools.alien_zombie_spawn_egg": "Alien Zombie Spawn Egg",
-  "biome.boss_tools.orbit_overworld_biome": "Orbit Biome",
   "item.boss_tools.barrel_of_fuel": "Barrel of Fuel",
-  "block.boss_tools.moon_glowstone_ore": "Moon Glowstone Ore",
-  "block.boss_tools.moon_bricks": "Moon Bricks",
-  "block.boss_tools.oxygen_loader": "Oxygen Loader",
-  "biome.boss_tools.mercury_biome": "Mercury Biome",
-  "block.boss_tools.venus_sand": "Venus Sand",
-  "block.boss_tools.mars_diamond_ore": "Mars Diamond Ore",
-  "block.boss_tools.fuel_refinery": "Fuel Refinery",
-  "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
   "item.boss_tools.netherite_space_suit": "Netherite Space Suit",
-  "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
-  "biome.boss_tools.mars_biome": "Mars Biome",
   "item.boss_tools.silicon_ingot": "Silicon Ingot",
-  "advancements.moon_advancement.descr": "§bHas entered the Moon",
-  "itemGroup.tab_basics": "Space-Bosstools: Basics",
-  "block.boss_tools.venus_diamond_ore": "Venus Diamond Ore",
-  "key.boss_tools.rocket_key_rotation_a": "Rocket Key Rotation A",
-  "item.boss_tools.orbit_mars": "Admin Feuerzeug",
   "item.boss_tools.barrel": "Barrel",
-  "key.boss_tools.rocket_key_rotation_d": "Rocket Key Rotation D",
-  "block.boss_tools.moon_stone": "Moon Stone",
-  "item.boss_tools.mercury": "Admin Feuerzeug",
   "item.boss_tools.golden_tank": "Golden Tank",
   "item.boss_tools.nose_cone": "Nose Cone",
   "item.boss_tools.compressed_steel": "Compressed Steel",
   "item.boss_tools.steel_ingot": "Steel Ingot",
-  "entity.boss_tools.alien_zombie": "Alien Zombie",
   "item.boss_tools.wheel": "Wheel",
   "item.boss_tools.iron_tank": "Iron Tank",
-  "block.boss_tools.moon_sand": "Moon Sand",
   "item.boss_tools.pygro_spawn_egg": "Pygro Spawn Egg",
   "item.boss_tools.iron_stick": "Iron Stick",
-  "block.boss_tools.mars_ice_shard_ore": "Mars Ice Shard Ore",
-  "block.boss_tools.mercury_cobblestone": "Mercury Cobblestone",
-  "biome.boss_tools.orbit_moon_biome": "Orbit Biome",
-  "item.boss_tools.orbit_moon": "Admin Feuerzeug",
-  "item.boss_tools.orbit_mercury": "Admin Feuerzeug",
-  "biome.boss_tools.orbit_mercury_biome": "Orbit Biome",
-  "item.boss_tools.steel_sword": "Steel Sword",
-  "biome.boss_tools.venus_hills_biome": "Venus Biome",
   "item.boss_tools.oxygen_gear": "Oxygen Gear",
   "item.boss_tools.oxygen_mask": "Oxygen Mask",
+  "item.boss_tools.steel_sword": "Steel Sword",
+  "item.boss_tools.tier_2_rocket": "§bTier 2 Rocket",
+  "item.boss_tools.engine_fan": "Engine Fan",
+  "item.boss_tools.tier_3_rocket": "§bTier 3 Rocket",
+  "item.boss_tools.netherite_oxygen_mask": "Netherite Oxygen Mask",
+  "item.boss_tools.space_boots": "Space Boots",
+  "item.boss_tools.rocket_fin": "Rocket Fin",
+  "item.boss_tools.rover": "§bRover",
+  "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
+  "item.boss_tools.chesse": "Chesse",
+  "item.boss_tools.steel_axe": "Steel Axe",
+  "item.boss_tools.mogler_spawn_egg": "Mogler Spawn Egg",
+  "item.boss_tools.desh_ingot": "Desh Ingot",
+  "item.boss_tools.compressed_desh": "Compressed Desh",
+
+  "itemGroup.tab_normal": "Space-BossTools",
+  "itemGroup.tab_flags": "Space-Bosstools: Flags",
+  "itemGroup.tab_blocks": "Space-Bosstools: Blocks",
+  "itemGroup.tab_basics": "Space-Bosstools: Basics",
+  "itemGroup.tab_machines": "Space-Bosstools: Machines",
+  "itemGroup.tab_spawn_eggs": "Space-Bosstools: Spawn Eggs",
+  "itemGroup.tab_materials": "Space-Bosstools: Materials",
+
+  "block.boss_tools.oxygen_bullet_generator": "Oxygen Bullet Generator",
+  "block.boss_tools.block_of_blue_iron_plating": "Block of Blue Iron Plating",
+  "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
+  "block.boss_tools.fuel": "Fuel",
+  "block.boss_tools.block_of_rusted_iron_pillar": "Block of Rusted Iron Pillar",
+  "block.boss_tools.mars_silicon_ore": "Mars Silicon Ore",
+  "block.boss_tools.moon_brick_slab": "Moon Brick Slab",
+  "block.boss_tools.cracked_moon_brick_stairs": "Cracked Moon Brick Stairs",
+  "block.boss_tools.flag_cyan": "Cyan Flag",
+  "block.boss_tools.flag_light_blue": "Light Blue Flag",
+  "block.boss_tools.flag_red": "Red Flag",
+  "block.boss_tools.block_of_iron_plating": "Block of Iron Plating",
+  "block.boss_tools.cracked_moon_brick_slab": "Cracked Moon Brick Slab",
+  "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
+  "block.boss_tools.coal_generator": "Coal Generator",
+  "block.boss_tools.block_of_desh": "Block of Desh",
+  "block.boss_tools.mars_iron_ore": "Mars Iron Ore",
+  "block.boss_tools.coal_torch": "Coal Torch",
+  "block.boss_tools.nasa_workbench": "§dNASA Workbench",
+  "block.boss_tools.mars_stone": "Mars Stone",
+  "block.boss_tools.venus_stone": "Venus Stone",
+  "block.boss_tools.infernal_spire": "Infernal Spire",
+  "block.boss_tools.flag_brown": "Brown Flag",
+  "block.boss_tools.moon_brick_stairs": "Moon Brick Stairs",
+  "block.boss_tools.flag_green": "Green Flag",
+  "block.boss_tools.flag_yellow": "Yellow Flag",
+  "block.boss_tools.flag_magenta": "Magenta Flag",
+  "block.boss_tools.flag": "Flag",
+  "block.boss_tools.moon_glowstone_ore": "Moon Glowstone Ore",
+  "block.boss_tools.moon_bricks": "Moon Bricks",
+  "block.boss_tools.oxygen_loader": "Oxygen Loader",
+  "block.boss_tools.venus_sand": "Venus Sand",
+  "block.boss_tools.mars_diamond_ore": "Mars Diamond Ore",
+  "block.boss_tools.fuel_refinery": "Fuel Refinery",
+  "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
+  "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
+  "block.boss_tools.venus_diamond_ore": "Venus Diamond Ore",
+  "block.boss_tools.moon_stone": "Moon Stone",
+  "block.boss_tools.moon_sand": "Moon Sand",
+  "block.boss_tools.mars_ice_shard_ore": "Mars Ice Shard Ore",
+  "block.boss_tools.mercury_cobblestone": "Mercury Cobblestone",
   "block.boss_tools.sky_stone": "Sky Stone",
-  "advancements.workbench_advancement.descr": "§bHas crafted a NASA Workbench",
-  "biome.boss_tools.moon_biome": "Moon Biome",
   "block.boss_tools.flag_gray": "Gray Flag",
   "block.boss_tools.wall_coal_torch": "Coal Torch",
-  "item.boss_tools.alien_bee": "Alien Bee Spawn Egg",
   "block.boss_tools.flag_blue": "Blue Flag",
-  "item.boss_tools.tier_2_rocket": "§bTier 2 Rocket",
-  "death.attack.venus.acid": "%1$s plenty of acid to sacrifice",
-  "advancements.rocket_tier_3_advancement.descr": "§bHas crafted a Tier 3 Rocket",
   "block.boss_tools.venus_sandstone": "Venus Sandstone",
-  "item.boss_tools.rocket_spawn_egg": "Rocket Spawn Egg",
-  "item.boss_tools.engine_fan": "Engine Fan",
-  "item.boss_tools.alien_spit_entity": "Alienspitentitytest",
   "block.boss_tools.flag_pink": "Pink Flag",
   "block.boss_tools.flag_purple": "Purple Flag",
-  "itemGroup.tab_machines": "Space-Bosstools: Machines",
   "block.boss_tools.mercury_stone": "Mercury Stone",
   "block.boss_tools.venus_gold_ore": "Venus Gold Ore",
-  "entity.boss_tools.star_crawler": "Star Crawler",
-  "item.boss_tools.rocket_tier_2_spawn_egg": "Rocket Spawn Egg",
-  "entity.boss_tools.rocket": "Rocket",
-  "biome.boss_tools.mercury_magma_biome": "Mercury Biome",
   "block.boss_tools.solar_panel": "Solar Panel",
-  "item.boss_tools.tier_3_rocket": "§bTier 3 Rocket",
-  "entity.boss_tools.alien": "Alien",
   "block.boss_tools.iron_mark": "Iron Mark",
-  "item.boss_tools.netherite_oxygen_mask": "Netherite Oxygen Mask",
-  "job.boss_tools.job12": "Leatherworker",
-  "job.boss_tools.job13": "Mason",
-  "job.boss_tools.job10": "Toolsmith",
-  "job.boss_tools.job11": "Butcher",
   "block.boss_tools.compressor": "Compressor",
   "block.boss_tools.mars_sand": "Mars Sand",
   "block.boss_tools.moon_iron_ore": "Moon Iron Ore",
-  "item.boss_tools.space_boots": "Space Boots",
-  "item.boss_tools.rocket_fin": "Rocket Fin",
   "block.boss_tools.flag_orange": "Orange Flag",
   "block.boss_tools.block_of_steel": "Block of Steel",
-  "item.boss_tools.rover": "§bRover",
   "block.boss_tools.block_of_silicon": "Block of Silicon",
-  "item.boss_tools.alien_spawn_egg": "Alien Spawn Egg",
   "block.boss_tools.venus_coal_ore": "Venus Coal Ore",
-  "advancements.rocket_tier_2_advancement.descr": "§bHas crafted a Tier 2 Rocket",
   "block.boss_tools.blast_furnace": "Blast Furnace",
-  "item.boss_tools.chesse": "Chesse",
-  "item.boss_tools.steel_axe": "Steel Axe",
-  "itemGroup.tab_spawn_eggs": "Space-Bosstools: Spawn Eggs",
-  "item.boss_tools.landing_gear": "Landing Gear Spawn Egg",
-  "item.boss_tools.orbit_venus": "Orbit Venus Portal Igniter",
-  "entity.boss_tools.rocket_tier_3": "Rocket",
-  "itemGroup.tab_materials": "Space-Bosstools: Materials",
-  "entity.boss_tools.rocket_tier_2": "Rocket",
-  "block.boss_tools.moon_cheese_ore": "Moon Cheese Ore",
-  "item.boss_tools.mogler_spawn_egg": "Mogler Spawn Egg",
-  "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
-  "subtitles.rocketfly": "",
-  "biome.boss_tools.orbit_venus_biome": "Orbit Biome",
-  "item.boss_tools.desh_ingot": "Desh Ingot",
-  "item.boss_tools.compressed_desh": "Compressed Desh",
   "block.boss_tools.flag_lime": "Lime Flag",
-  "item.boss_tools.rocket_tier_3_spawn_egg": "Rocket Spawn Egg",
-  "block.boss_tools.moon_desh_ore": "Moon Desh Ore"
+  "block.boss_tools.moon_cheese_ore": "Moon Cheese Ore",
+  "block.boss_tools.moon_desh_ore": "Moon Desh Ore",
+
+  "fluid.boss_tools.fuel": "Fuel",
+  "fluid.fuel": "Fuel",
+
+  "entity.boss_tools.mogler": "Mogler",
+  "entity.boss_tools.pygro": "Pygro",
+  "entity.boss_tools.alien": "Alien",
+  "entity.boss_tools.alien_zombie": "Alien Zombie",
+  "entity.boss_tools.star_crawler": "Star Crawler",
+  "entity.boss_tools.rocket_t1": "Tier 1 Rocket",
+  "entity.boss_tools.rocket_t2": "Tier 2 Rocket",
+  "entity.boss_tools.rocket_t3": "Tier 3 Rocket",
+  "entity.boss_tools.rover": "Rover",
+
+  "biome.boss_tools.orbit": "Orbit Biome",
+  "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
+  "biome.boss_tools.venus_biome": "Venus Biome",
+  "biome.boss_tools.mercury_biome": "Mercury Biome",
+  "biome.boss_tools.mars_biome": "Mars Biome",
+  "biome.boss_tools.venus_hills_biome": "Venus Hills Biome",
+  "biome.boss_tools.moon_biome": "Moon Biome",
+  "biome.boss_tools.mercury_magma_biome": "Mercury Biome",
+  "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
+
+  "advancements.workbench_advancement.title": "NASA Workbench",
+  "advancements.rocket_tier_2_advancement.title": "Tier 2 Rocket",
+  "advancements.rocket_advancement.descr": "§bHas crafted a Tier 1 Rocket",
+  "advancements.rocket_advancement.title": "Tier 1 Rocket",
+  "advancements.moon_advancement.title": "Moon",
+  "advancements.rocket_tier_3_advancement.title": "Tier 3 Rocket",
+  "advancements.rocket_tier_3_advancement.descr": "§bHas crafted a Tier 3 Rocket",
+  "advancements.moon_advancement.descr": "§bHas entered the Moon",
+  "advancements.workbench_advancement.descr": "§bHas crafted a NASA Workbench",
+  "advancements.rocket_tier_2_advancement.descr": "§bHas crafted a Tier 2 Rocket",
+
+  "key.categories.boss_tools": "Space-Bosstools",
+  "key.boss_tools.rocket_start": "Rocket Start",
+
+  "death.attack.oxygen": "%1$s couldn\u0027t breathe anymore",
+  "death.attack.venus.acid": "%1$s plenty of acid to sacrifice",
+
+  "job.boss_tools.job1": "Farmer",
+  "job.boss_tools.job2": "Fisherman",
+  "job.boss_tools.job3": "Shepheard",
+  "job.boss_tools.job4": "Fletcher",
+  "job.boss_tools.job5": "Librarian",
+  "job.boss_tools.job6": "Cartographer",
+  "job.boss_tools.job7": "Cleric",
+  "job.boss_tools.job8": "Armorer",
+  "job.boss_tools.job9": "Weaponsmith",
+  "job.boss_tools.job10": "Toolsmith",
+  "job.boss_tools.job11": "Butcher",
+  "job.boss_tools.job12": "Leatherworker",
+  "job.boss_tools.job13": "Mason"
 }
