--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -18,7 +18,7 @@
   "item.boss_tools.netherite_space_boots": "네더라이트 우주복 부츠",
   "item.boss_tools.steel_pickaxe": "강철 곡괭이",
   "item.boss_tools.space_pants": "우주복 하의",
-  "item.boss_tools.tier_1_rocket": "§b1 티어 로켓",
+  "item.boss_tools.tier_1_rocket": "1 티어 로켓",
   "item.boss_tools.diamond_engine": "다이아몬드 엔진",
   "item.boss_tools.space_suit": "우주복 상의",
   "item.boss_tools.alien_zombie_spawn_egg": "외계인 좀비 생성 알",
@@ -37,13 +37,13 @@
   "item.boss_tools.oxygen_gear": "산소 장치",
   "item.boss_tools.oxygen_mask": "산소 마스크",
   "item.boss_tools.steel_sword": "강철 검",
-  "item.boss_tools.tier_2_rocket": "§b2 티어 로켓",
+  "item.boss_tools.tier_2_rocket": "2 티어 로켓",
   "item.boss_tools.engine_fan": "엔진 팬",
-  "item.boss_tools.tier_3_rocket": "§b3 티어 로켓",
+  "item.boss_tools.tier_3_rocket": "3 티어 로켓",
   "item.boss_tools.netherite_oxygen_mask": "네더라이트 산소 마스크",
   "item.boss_tools.space_boots": "우주복 부츠",
   "item.boss_tools.rocket_fin": "로켓 분사구",
-  "item.boss_tools.rover": "§b로버",
+  "item.boss_tools.rover": "로버",
   "item.boss_tools.alien_spawn_egg": "외계인 생성 알",
   "item.boss_tools.chesse": "치즈",
   "item.boss_tools.steel_axe": "강철 도끼",
