--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -22,12 +22,12 @@
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.space_suit": "Space Suit",
   "item.boss_tools.alien_zombie_spawn_egg": "Alien Zombie Spawn Egg",
-  "item.boss_tools.barrel_of_fuel": "Barrel of Fuel",
+  "item.boss_tools.fuel_barrel": "Barrel of Fuel",
   "item.boss_tools.netherite_space_suit": "Netherite Space Suit",
   "item.boss_tools.silicon_ingot": "Silicon Ingot",
   "item.boss_tools.barrel": "Barrel",
   "item.boss_tools.golden_tank": "Golden Tank",
-  "item.boss_tools.nose_cone": "Nose Cone",
+  "item.boss_tools.rocket_nose_cone": "Rocket Nose Cone",
   "item.boss_tools.compressed_steel": "Compressed Steel",
   "item.boss_tools.steel_ingot": "Steel Ingot",
   "item.boss_tools.wheel": "Wheel",
@@ -115,8 +115,8 @@
   "block.boss_tools.mars_sand": "Mars Sand",
   "block.boss_tools.moon_iron_ore": "Moon Iron Ore",
   "block.boss_tools.flag_orange": "Orange Flag",
-  "block.boss_tools.block_of_steel": "Block of Steel",
-  "block.boss_tools.block_of_silicon": "Block of Silicon",
+  "block.boss_tools.steel_block": "Block of Steel",
+  "block.boss_tools.silicon_block": "Block of Silicon",
   "block.boss_tools.venus_coal_ore": "Venus Coal Ore",
   "block.boss_tools.blast_furnace": "Blast Furnace",
   "block.boss_tools.flag_lime": "Lime Flag",
