--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -22,12 +22,12 @@
   "item.boss_tools.diamond_engine": "다이아몬드 엔진",
   "item.boss_tools.space_suit": "우주복 상의",
   "item.boss_tools.alien_zombie_spawn_egg": "외계인 좀비 생성 알",
-  "item.boss_tools.barrel_of_fuel": "연료 통",
+  "item.boss_tools.fuel_barrel": "연료 통",
   "item.boss_tools.netherite_space_suit": "네더라이트 우주복 상의",
   "item.boss_tools.silicon_ingot": "실리콘 주괴",
   "item.boss_tools.barrel": "통",
   "item.boss_tools.golden_tank": "금 탱크",
-  "item.boss_tools.nose_cone": "원뿔형 탄두",
+  "item.boss_tools.rocket_nose_cone": "원뿔형 탄두",
   "item.boss_tools.compressed_steel": "압축 강철",
   "item.boss_tools.steel_ingot": "강철 주괴",
   "item.boss_tools.wheel": "바퀴",
@@ -115,8 +115,8 @@
   "block.boss_tools.mars_sand": "화성 모래",
   "block.boss_tools.moon_iron_ore": "달 철 광석",
   "block.boss_tools.flag_orange": "주황색 깃발",
-  "block.boss_tools.block_of_steel": "강철 블록",
-  "block.boss_tools.block_of_silicon": "실리콘 블록",
+  "block.boss_tools.steel_block": "강철 블록",
+  "block.boss_tools.silicon_block": "실리콘 블록",
   "block.boss_tools.venus_coal_ore": "금성 석탄 광석",
   "block.boss_tools.blast_furnace": "용광로",
   "block.boss_tools.flag_lime": "연두색 깃발",
