--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -60,6 +60,7 @@
   "itemGroup.tab_spawn_eggs": "Space-Bosstools: Spawn Eggs",
   "itemGroup.tab_materials": "Space-Bosstools: Materials",
 
+  "block.boss_tools.coal_lantern": "Coal Lantern",
   "block.boss_tools.oxygen_bullet_generator": "Oxygen Bullet Generator",
   "block.boss_tools.block_of_blue_iron_plating": "Block of Blue Iron Plating",
   "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
